WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18400
Database example doesn't work on Gtk port
https://bugs.webkit.org/show_bug.cgi?id=18400
Summary
Database example doesn't work on Gtk port
Mario Bensi
Reported
2008-04-10 02:17:54 PDT
+++ This bug was initially created as a clone of
Bug #17207
+++ Error reported: "Failed to open the database on disk. This is probably because the version was bad or there is not enough space left in this domain's quota". It doesn't save notes.
Attachments
patch to fix quota on webkit gtk
(1.39 KB, patch)
2008-04-10 02:21 PDT
,
Mario Bensi
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Bensi
Comment 1
2008-04-10 02:21:52 PDT
Created
attachment 20448
[details]
patch to fix quota on webkit gtk
Mark Rowe (bdash)
Comment 2
2008-04-10 17:23:15 PDT
Comment on
attachment 20448
[details]
patch to fix quota on webkit gtk r=me
Alp Toker
Comment 3
2008-04-10 17:32:49 PDT
Landed in
r31790
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug