2008-04-10  Mario Bensi  <mbensi@pleyo.com>

Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=18400
        Database example doesn't work on Gtk port

        Fix quota in ChromeClient

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::exceededDatabaseQuota):


git-svn-id: svn://svn.chromium.org/blink/trunk@31790 bbb929c8-8fbe-4397-9dbb-9b2b20218538